React is init. HTML W3C validator is passed.

--- a/sign-in.html
+++ b/sign-in.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argent Bank - Home Page</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    >
   </head>
   <body>
     <nav class="main-nav">
@@ -17,7 +17,7 @@
           class="main-nav-logo-image"
           src="./img/argentBankLogo.png"
           alt="Argent Bank Logo"
-        />
+        >
         <h1 class="sr-only">Argent Bank</h1>
       </a>
       <div>
@@ -34,14 +34,14 @@
         <form>
           <div class="input-wrapper">
             <label for="username">Username</label
-            ><input type="text" id="username" />
+            ><input type="text" id="username">
           </div>
           <div class="input-wrapper">
             <label for="password">Password</label
-            ><input type="password" id="password" />
+            ><input type="password" id="password">
           </div>
           <div class="input-remember">
-            <input type="checkbox" id="remember-me" /><label for="remember-me"
+            <input type="checkbox" id="remember-me"><label for="remember-me"
               >Remember me</label
             >
           </div>
