--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argent Bank - Home Page</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    >
   </head>
   <body>
     <nav class="main-nav">
@@ -17,7 +17,7 @@
           class="main-nav-logo-image"
           src="./img/argentBankLogo.png"
           alt="Argent Bank Logo"
-        />
+        >
         <h1 class="sr-only">Argent Bank</h1>
       </a>
       <div>
@@ -40,7 +40,7 @@
       <section class="features">
         <h2 class="sr-only">Features</h2>
         <div class="feature-item">
-          <img src="./img/icon-chat.png" alt="Chat Icon" class="feature-icon" />
+          <img src="./img/icon-chat.png" alt="Chat Icon" class="feature-icon">
           <h3 class="feature-item-title">You are our #1 priority</h3>
           <p>
             Need to talk to a representative? You can get in touch through our
@@ -52,7 +52,7 @@
             src="./img/icon-money.png"
             alt="Chat Icon"
             class="feature-icon"
-          />
+          >
           <h3 class="feature-item-title">More savings means higher rates</h3>
           <p>
             The more you save with us, the higher your interest rate will be!
@@ -63,7 +63,7 @@
             src="./img/icon-security.png"
             alt="Chat Icon"
             class="feature-icon"
-          />
+          >
           <h3 class="feature-item-title">Security you can trust</h3>
           <p>
             We use top of the line encryption to make sure your data and money
