--- a/user.html
+++ b/user.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Argent Bank - Home Page</title>
-    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/main.css">
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+    >
   </head>
   <body>
     <nav class="main-nav">
@@ -17,7 +17,7 @@
           class="main-nav-logo-image"
           src="./img/argentBankLogo.png"
           alt="Argent Bank Logo"
-        />
+        >
         <h1 class="sr-only">Argent Bank</h1>
       </a>
       <div>
@@ -33,7 +33,7 @@
     </nav>
     <main class="main bg-dark">
       <div class="header">
-        <h1>Welcome back<br />Tony Jarvis!</h1>
+        <h2>Welcome back<br>Tony Jarvis!</h2>
         <button class="edit-button">Edit Name</button>
       </div>
       <h2 class="sr-only">Accounts</h2>
