--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/svg+xml" href="/img/argentBankLogo.svg">
+    <link rel="icon" type="image/avif" href="/img/argentBankMiniLogo.avif">
     <title>Argent Bank - Home Page</title>
     <link rel="stylesheet" href="./src/css/main.css">
     <link
