Lighthouse metrics are improved.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Argent Bank - votre nouvelle banque en ligne">
     <link rel="icon" type="image/avif" href="/img/argentBankMiniLogo.avif">
+    <link rel="preload" as="image" href="/img/bank-tree.avif" aria-hidden="true">
+    <link rel="preload" as="image" href="/img/argentBankLogo.avif" aria-hidden="true">
     <title>Argent Bank - Home Page</title>
     <link rel="stylesheet" href="./src/css/main.css">
     <link
